[gd_scene load_steps=22 format=2]

[ext_resource path="res://Characters/enemy/ChillingEnemy.gd" type="Script" id=1]
[ext_resource path="res://Characters/enemy/Chilling_Enemy-4.png" type="Texture" id=2]
[ext_resource path="res://Characters/enemy/Chilling_Enemy-2.png" type="Texture" id=3]
[ext_resource path="res://Characters/enemy/Chilling_Enemy-5.png" type="Texture" id=4]
[ext_resource path="res://Characters/enemy/Chilling_Enemy-3.png" type="Texture" id=5]
[ext_resource path="res://Characters/Player/Effects.gd" type="Script" id=6]
[ext_resource path="res://Characters/enemy/Chilling_Enemy_Attack-6.png" type="Texture" id=7]
[ext_resource path="res://testingthings/DetectWall.tscn" type="PackedScene" id=8]
[ext_resource path="res://Characters/enemy/DetectPortal.tscn" type="PackedScene" id=9]
[ext_resource path="res://Characters/enemy/Cloudchilling.png" type="Texture" id=10]
[ext_resource path="res://Shaders/Enemyhit.tres" type="Shader" id=11]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10.6451, 9.80361 )

[sub_resource type="CapsuleShape2D" id=7]
radius = 518.362

[sub_resource type="CircleShape2D" id=8]
radius = 24.7197

[sub_resource type="ShaderMaterial" id=2]
resource_local_to_scene = true
shader = ExtResource( 11 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 7 ) ],
"loop": true,
"name": "Attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ), ExtResource( 5 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:material:shader_param/flash_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.429, 0.0 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 15.2612, 14.0991 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 9, 2.33331 )

[sub_resource type="Animation" id=9]
resource_name = "Attack"
length = 2.0
tracks/0/type = "method"
tracks/0/path = NodePath("..")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "shoot"
}, {
"args": [  ],
"method": "end_of_shoot"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 1.3, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 1, 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../Cloud:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../Cloud:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.3, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0.0377417, 0.0480795 ), Vector2( 0.0743267, 0.0862667 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Cloud:self_modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.3, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../AttackDetector/CollisionShape2D:scale")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../AttackDetector/CollisionShape2D:disabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("../Cloud:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Cloud:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.0377417, 0.0480795 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../Cloud:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../AttackDetector:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../AttackDetector/CollisionShape2D:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../AttackDetector/CollisionShape2D:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[node name="Enemy" type="KinematicBody2D" groups=["Enemy"]]
position = Vector2( 152, 94 )
scale = Vector2( 3.19604, 3.51087 )
collision_layer = 3
collision_mask = 3
script = ExtResource( 1 )
Health = 5

[node name="Hitbox" type="Area2D" parent="."]
scale = Vector2( 1.29703, 1.2559 )
z_index = 1
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
modulate = Color( 1, 0.890196, 0, 1 )
position = Vector2( -0.527283, -0.75 )
z_index = -1
shape = SubResource( 1 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( -1, -1 )
scale = Vector2( 0.0837345, 0.101094 )

[node name="PlayerDetector" type="Area2D" parent="."]
position = Vector2( 0.625793, 0 )
scale = Vector2( 0.0482886, 0.050547 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
position = Vector2( -745.146, -264.842 )
shape = SubResource( 7 )

[node name="AttackDetector" type="Area2D" parent="."]
position = Vector2( 35.6691, 12.8173 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
position = Vector2( -35.982, -13.9567 )
shape = SubResource( 8 )
disabled = true

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
material = SubResource( 2 )
position = Vector2( -1.25159, 0 )
scale = Vector2( 0.0473273, 0.0434873 )
frames = SubResource( 10 )
animation = "Walk"
frame = 3
playing = true
flip_h = true

[node name="Enemy_effects" type="AnimationPlayer" parent="."]
anims/Stagger = SubResource( 4 )
script = ExtResource( 6 )

[node name="DamageTimer" type="Timer" parent="."]

[node name="Damage" type="AudioStreamPlayer2D" parent="."]
pitch_scale = 0.81

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 5
collision_mask = 5

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.555546, -1.28173 )
rotation = -3.14159
shape = SubResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=["Enemy"]]
position = Vector2( -0.93866, 9.11455 )
rotation = 3.14159
scale = Vector2( 1.5345, 0.427239 )
shape = SubResource( 6 )

[node name="RayCast2D" type="RayCast2D" parent="."]
position = Vector2( -15.9572, -1.70898 )
scale = Vector2( 0.810613, 0.617241 )
enabled = true

[node name="DetectWall" parent="." instance=ExtResource( 8 )]

[node name="DetectPortal" parent="." instance=ExtResource( 9 )]
scale = Vector2( 1.99249, 0.867643 )

[node name="Enemy_Anims" type="AnimationPlayer" parent="."]
root_node = NodePath("../AnimatedSprite")
anims/Attack = SubResource( 9 )
anims/RESET = SubResource( 11 )

[node name="Tween" type="Tween" parent="."]

[node name="Cloud" type="Sprite" parent="."]
visible = false
rotation = 0.212217
scale = Vector2( 0.0377417, 0.0480795 )
texture = ExtResource( 10 )

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_AttackDetector_body_entered"]
[connection signal="timeout" from="DamageTimer" to="." method="_on_DamageTimer_timeout"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="Enemy_Anims" to="." method="_on_Enemy_Anims_animation_finished"]
